# autonomous-research-sailboat

./: .conda-env  .gitignore  README.md  run_boat.py  setup  setup_root
docker/: .dockerignore  .dockin  Dockerfile  d_scripts_linux.sh  d_setup_linux.sh  ros_entrypoint.sh
docker_setup/: USAGE.md  d_setup_linux.sh
joinks/: .#*shell*  Boats.ipynb  Plotter.ipynb  mdp.py
oars_pkg/: README.md  boat_class.py
oars_pkg/ROSdemo/: README.md  random_recv.py  random_send.py
oars_pkg/launch/: nodes.launch
oars_pkg/msg/: ObjFrames.msg
oars_pkg/nav_and_controls/: command_center.py  path_planner.py  repeater.py
oars_pkg/sensing/: README.md  gps.py  lidar.py  map_class.py  mm_wave.py  ublox_gps.py
oars_pkg/sensing/computer_vision/: angle_calculating.py  testing_kinect_with_tf.py
oars_pkg/sensing/computer_vision/data/: inception_v2_class_labels.pbtxt
oars_pkg/sensing/computer_vision/tf_trt_models/: pbtxt_converter.py
oars_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
oars_ws/devel/include/oars_pkg/: ObjFrame.h
oars_ws/devel/share/oars_pkg/cmake/: oars_pkg-msg-extras.cmake  oars_pkg-msg-paths.cmake  oars_pkgConfig.cmake
oars_ws/devel/share/roseus/ros/oars_pkg/: manifest.l
oars_ws/src/oars_pkg/: CMakeLists.txt  README.md  boat.launch  package.xml
oars_ws/src/oars_pkg/ROSdemo/: random_send.py
oars_ws/src/oars_pkg/msg/: ObjFrame.msg  README.md
oars_ws/src/oars_pkg/nav_and_controls/: README.md  boat.launch  boat_simulator.py  command_center.py  motor_calibration.py  motor_control.ino  path_planner.py  repeater.py  ros_path_planner.py  rviz_test.py  sail_pos.py  sail_rudder_control.py  sail_rudder_transmitter.py
oars_ws/src/oars_pkg/sensing/: aruco.py  map_class.py  ublox_gps.py  wind.py
oars_ws/src/oars_pkg/sensing/raspi/: adaruit_imu.py
(+7 files in other folders)
